--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blue Jobs | A patner to your career.</title>
+    <title>Blue Jobs | The Direct Link to Your Next Hire | Le Lien Direct Vers Votre Prochain Recrutement</title>
   </head>
   <body>
     <div id="root"></div>
